--- a/allaboutme.html
+++ b/allaboutme.html
@@ -147,7 +147,7 @@
         color: white;
       }
 
-      /*--- Default CSS Above /\ --- */
+
       #image {
         margin: 1em;
         display: flex;
@@ -159,8 +159,41 @@
         width: 450px;
       }
 
-
-      
+/* Mobile Compatibility */
+@media (max-width: 770px) {
+  p {
+    font-size: 1em;
+    text-indent: 2%;
+  }
+  h1 {
+    font-size: 2em;
+  }
+  .navbar a {
+    font-size: 1em;
+    padding: 5px 5px;
+    margin: 0.5em;
+  }
+  #logo {
+    height: 60px;
+    width: 175px;
+    margin: 0.5em;
+  }
+  img {
+    height: 200px;
+    width: 200px;
+  }
+  .bottomlinks a {
+    font-size: 1em;
+    padding: 5px 5px;
+    margin: 0.5em;
+  }
+  #copyright {
+    font-size: 1em;
+  }
+  .social-section a {
+    font-size: 1em;
+  }
+}
     </style>
   </head>
   <body>
