--- a/book.html
+++ b/book.html
@@ -124,7 +124,7 @@
         color: white;
       }
 
-      /*--- Default CSS Above /\ --- */
+  
 
       .booking-form {
         display: flex;
@@ -153,6 +153,26 @@
         background-color: #2d545e;
       }
 
+     /* Mobile Compatibility */
+@media (max-width: 770px) {
+  
+  #logo {
+    height: 60px;
+    width: 150px;
+  }
+
+  .navbar a {
+    font-size: 1em;
+    padding: 5px 5px;
+    margin: 0.5em;
+  }
+
+  .bottomlinks a {
+    font-size: 1em;
+    padding: 5px 5px;
+    margin: 0.5em;
+  }
+}
     </style>
   </head>
 
