--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
         text-decoration: none;
         color: white;
       }
-      /*--- Default CSS Above /\ --- */
+    
+      
       #image {
         margin: 1em;
         display: flex;
@@ -167,6 +168,33 @@
         display: inline-block;
       }
 
+/* Mobile Compatibility */
+ @media (max-width: 770px) {
+        h1 {
+          font-size: 2em;
+        }
+
+        p {
+          font-size: 1em;
+        }
+
+        .navbar a {
+          font-size: 1em;
+          padding: 8px 8px;
+          margin: 0.5em;
+        }
+
+        .bottomlinks a {
+          font-size: 1em;
+          padding: 8px 8px;
+          margin: 0.5em;
+        }
+
+        img {
+          height: 300px;
+          width: 400px;
+        }
+      }
     </style>
   </head>
   <body>
