--- a/sitemap.html
+++ b/sitemap.html
@@ -124,7 +124,6 @@
         color: white;
       }
 
-      /*--- Default CSS Above /\ --- */
 
       #linkslist {
         text-indent: 30px;
@@ -135,6 +134,50 @@
         width: auto;
         color: #12343b;
       }
+
+      @media (max-width: 770px) {
+  body {
+    margin: 0;
+  }
+
+  .navbar {
+    font-size: 1em;
+  }
+
+  .navbar a {
+    padding: 8px 8px;
+    margin: 0.5em;
+  }
+
+  .bottomlinks {
+    font-size: 1em;
+  }
+
+  .bottomlinks a {
+    padding: 8px 8px;
+    margin: 0.5em;
+  }
+
+  #logo {
+    height: 60px;
+    width: 170px;
+    margin: 0.5em;
+  }
+
+  h1 {
+    font-size: 2.5em;
+  }
+
+  p {
+    font-size: 1em;
+    text-indent: 1.5%;
+  }
+
+  #linkslist {
+    font-size: 1em;
+    text-indent: 1.5%;
+  }
+}
     </style>
   </head>
   <body>
